RDCC-4453: Addressing Sonar Smells in UserProfileDataResponse.java